--- a/public/index.css
+++ b/public/index.css
@@ -1,14 +1,5 @@
-#img {
-  display: block;
-  margin: auto;
-  height: 128px;
-  width: 128px;
-  padding: 2rem;
-}
-
-#canvas {
-  display: block;
-  margin: 2rem auto;
-  width: 540px;
-  height: 540px;
+html {
+  font-family: sans-serif;
+  background: #000;
+  color: #eee;
 }
